<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Servite Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="swipe_to_signin">Swipe your card to sign in</string>
    <string name="signin">Sign in</string>
    <string name="scan_a_card">Scan a card</string>
    <string name="scan">Scan</string>

    <string-array name="drawer_fragment_classes">
        <item>ScanFragment</item>
        <item>EventsFragment</item>
        <item>UsersFragment</item>
        <item>AboutFragment</item>
    </string-array>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="go">Go</string>
    <string name="enter_card">Enter card number</string>
    <string name="last_scanned">Last card scanned:</string>
    <string name="events">Events</string>
    <string name="new_event">New event</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="total">Total</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="scan_a_card_to_change_permissions">Scan a card to change user permissions</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="users">Users</string>
    <string name="make_an_admin">Make user an admin</string>
    <string name="is_now_admin">is now an admin</string>
    <string name="is_not_admin">is no longer an admin</string>
    <string name="tally">Totals</string>
    <string name="log">Logs</string>
    <string name="already_scanned">Already scanned</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

</resources>
